<resources>
    <string name="app_name">CoolWeather</string>
    <string name="location">Bucharest</string>
    <string name="temperature_placeholder">7* C</string>
    <string name="conditions_placeholder">cer noros</string>
    <string name="about_text">Despre</string>
    <string name="more_details_text">Mai multe detalii</string>
    <string name="image_description">conditii meteo</string>
    <string name="city_text">Nume oras</string>
    <string name="country_text">Tara</string>
    <string name="add_city">Adauga oras</string>
    <string name="add_new_city">Adauga oras nou</string>
    <string name="forecast_text">Prognoza</string>
    <string name="date_placeholder">dd/MM/yyyy</string>
    <string name="viewChart">Vezi grafic</string>
</resources>